--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+@font-face {
+    font-family: normalFont;
+    src: url(assets/font/font.woff) format("opentype");
+}
+
 html,
 body {
     scroll-behavior: smooth;
@@ -6,6 +12,13 @@ body {
     background-attachment: fixed;
     background-color: #fee2f8;
     background-image: linear-gradient(315deg, #fee2f8 0%, #dcf8ef 74%);
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'normalFont', 'arial', sans-serif;
 }
 
 @import 'semantic-ui-css/semantic.css';
