--- a/src/app/container/container.component.css
+++ b/src/app/container/container.component.css
@@ -40,3 +40,10 @@ h1 {
 h1.light {
     color: black;
 }
+
+h1.mobile {
+    max-height: 100px;
+    font-size: 2em;
+    text-align: center;
+    font-family: 'normalFont', 'arial', sans-serif;
+}
