--- a/src/app/container/fullrecord/fullrecord.component.html
+++ b/src/app/container/fullrecord/fullrecord.component.html
@@ -1,31 +1,49 @@
-<app-header></app-header>
 <div class="ui container centered cards one column" *ngIf="record">
     <div class="card" [ngClass]="_color">
-        <div class="image">
-            <img alt="{{this.record[0].title}}" [src]="this.record[0].hdurl"
-                *ngIf="this.record[0].media_type === 'image'" style="max-height: 720px;">
-            <iframe [src]="sanitizeVideoURL(this.record[0].url)" *ngIf="record[0].media_type === 'video'"
-                style="width: 100%; height: 720px;">
-            </iframe>
+      <div class="image" style="height: 500px; overflow: hidden;">
+        <div *ngIf="!imageLoaded" style="height: 500px;">
+          <div class="ui active dimmer">
+            <div class="ui massive text loader">Loading...</div>
+          </div>
         </div>
-        <div class="content">
-            <div class="header">{{ record[0].title }}</div>
-            <div class="meta">
-                <i>{{ record[0].credit }}</i>
-            </div>
-            <div class="description">
-                {{ record[0].explanation }}
-                <br />
-            </div>
+        
+        <ng-container *ngIf="record[0]?.media_type === 'image'; else videoTemplate">
+          <img 
+            (load)="onImageLoad()"
+            [alt]="record[0]?.title" 
+            [src]="record[0]?.hdurl"
+            style="height: 100%; width: 100%; object-fit: cover; display: block;"
+            [style.display]="imageLoaded ? 'block' : 'none'"
+          >
+        </ng-container>
+        
+        <ng-template #videoTemplate>
+          <iframe 
+            [src]="sanitizeVideoURL(record[0]?.url)" 
+            style="width: 100%; height: 100%;"
+          ></iframe>
+        </ng-template>
+      </div>
+        
+      <div class="content">
+        <div class="header">{{ record[0].title }}</div>
+        <div class="meta">
+          <i>{{ record[0].credit }}</i>
         </div>
-        <div class="extra content">
-            <span class="right floated">
-                {{ record[0].date }}
-            </span>
-            <div *ngIf="this.record[0].media_type === 'image'">
-                <i class="large link arrow alternate circle down outline icon" [ngClass]="_color"
-                    (click)="downloadMyFile(this.record[0].hdurl)"></i>
-            </div>
+        <div class="description">
+          {{ record[0].explanation }}
+          <br />
         </div>
+      </div>
+      <div class="extra content">
+        <span class="right floated">
+          {{ record[0].date }}
+        </span>
+        <div *ngIf="record[0].media_type === 'image'">
+          <i class="large link arrow alternate circle down outline icon" [ngClass]="_color"
+            (click)="downloadMyFile(record[0].hdurl)"></i>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
+  
