--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -5,13 +5,15 @@ h1 {
     font-family: 'normalFont', 'arial', sans-serif;
 }
 
-h1.light {
-    color: black;
-}
-
 h1.mobile {
     max-height: 100px;
     font-size: 2em;
     text-align: center;
     font-family: 'normalFont', 'arial', sans-serif;
 }
+
+.gradient-text {
+    background-image: linear-gradient(60deg, #d300fd, #5a00f7);
+    background-clip: text;
+    color: transparent;
+  }
