--- a/src/app/container/card/card.component.html
+++ b/src/app/container/card/card.component.html
@@ -25,10 +25,10 @@
                 <i class=""></i>
                 {{ media_type | titlecase }}
             </span>
-            <button class="mini ui icon circular button red">
+            <button *ngIf="!isLiked" class="mini ui icon circular button" (click)="likeImage(date)">
                 <i class="large heart outline icon"></i>
             </button>
-            <button class="mini ui icon circular button">
+            <button *ngIf="isLiked" class="mini ui icon circular button red" (click)="likeImage(date)">
                 <i class="large heart outline icon"></i>
             </button>
         </div>
