--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -2,3 +2,6 @@
     <input type="text" placeholder="Search..." (change)="captureText($event)" #searchTerm>
     <i class="inverted circular search link icon" (click)="searchQuery()"></i>
 </div>
+    <button class="mini ui icon circular button red">
+        {{ totalLikedImages$ | async}}
+    </button>
